# alock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exp.conf  exp_run.sh  experiment_script.sh  get_results.sh  main.cc  port_range.sh  run.sh  setup.sh  shutdown.sh
include/: CMakeLists.txt  client.h  common.h  experiment.h  lock_table.h  node.h  setup.h
include/locks/: a_lock.h  mcs_lock.h  rdma_mcs_lock.h  rdma_spin_lock.h
plot/: plot.py  plot.sh
results/cas/rand/t1/: tput_results.csv
results/cas/rand/t1/apt138/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt140/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt142/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt147/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt148/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt149/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt150/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt152/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt158/: lat_result.csv  tput_result.csv
results/cas/rand/t1/apt164/: lat_result.csv  tput_result.csv
results/cas/rand/t2/: tput_results.csv
results/cas/rand/t2/apt138/: lat_result.csv  tput_result.csv
results/cas/rand/t2/apt140/: lat_result.csv  tput_result.csv
results/cas/rand/t2/apt142/: lat_result.csv  tput_result.csv
results/cas/rand/t2/apt147/: lat_result.csv  tput_result.csv
results/cas/rand/t2/apt148/: lat_result.csv  tput_result.csv
results/cas/rand/t2/apt149/: lat_result.csv  tput_result.csv
results/cas/rand/t2/apt150/: lat_result.csv  tput_result.csv
results/cas/rand/t2/apt152/: lat_result.csv  tput_result.csv
results/cas/rand/t2/apt158/: lat_result.csv  (+1 more)
results/cas/top/t1/: lat_results.csv  tput_results.csv
results/cas/top/t2/: tput_results.csv
results/write/rand/t1/: tput_results.csv
results/write/rand/t2/: tput_results.csv
results/write/top/t1/: tput_results.csv
results/write/top/t2/: tput_results.csv
scripts/: README.md  build.sh  cloudlab.csv  exclude.txt  launch.py  shutdown.py  shutdown.sh  sync.py  sync.sh
scripts/log/: test
scripts/log/old/: budget_exp.sh  cloudlab_setup.sh  config.conf  get_data.sh  scalability_exp.sh  spin_exp.sh
tests/: a_lock_test.cc  mcs_lock_test.cc  rdma_mcs_lock_test.cc  rdma_spin_lock_test.cc
tla/: alock.cfg  alock.tla
(+122 files in other folders)
